<resources>
    <string name="app_name">MonActu</string>
    <string name="no_connection_message">Pas de connexion réseau</string>
    <string name="no_connection_dialog_title">Pas de connexion</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="thumbnail_of_article">thumbnail of article</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="sources">Sources</string>
    <string name="source1">Google</string>
    <string name="source2">Le Monde</string>
    <string name="source3">L\'Equipe</string>
    <string name="source4">Les Echos</string>
    <string name="source5">Libération</string>
    <string name="date">Date</string>
    <string name="source">Source</string>
    <string name="description">Description</string>
    <string name="read_article">Lire l\'article</string>
</resources>