<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtAuthor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/author" />

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/date" />

    <TextView
        android:id="@+id/txtSource"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/source" />

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/description" />

    <ImageView
        android:id="@+id/articleThumbnail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/thumbnail_of_article"
        android:src="@android:drawable/ic_dialog_info" />

    <TextView
        android:id="@+id/readArticle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/read_article" />

</LinearLayout>

